Bugfix: transition issue with Z-index

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,6 @@ section {
 .slider.waiting {
     z-index:-1;
     opacity:1;
-    transition: none; 
 }
 
 .slider.fadeOut {
